--- a/verdura/pubspec.yaml
+++ b/verdura/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  url_launcher: ^6.1.11
   carousel_slider: ^4.2.1
   flutter:
     sdk: flutter
